#76 Bug fixed. Overlapped slides in "Latest work slider" (<1000px aprox)

--- a/sites/all/themes/summa-revamp/css/featured-case-studies/featured-case-studies.css
+++ b/sites/all/themes/summa-revamp/css/featured-case-studies/featured-case-studies.css
@@ -142,6 +142,7 @@
         width: 100%;
         height: 765px;
         text-align: center;
+        margin-right: 300px;
         float: left;
     }
 
