--- a/sites/all/themes/summa-revamp/css/featured-case-studies/featured-case-studies_style_640up.scss
+++ b/sites/all/themes/summa-revamp/css/featured-case-studies/featured-case-studies_style_640up.scss
@@ -28,6 +28,7 @@ $title-height: 119px + 23px;
         width: 100%;
         height: 907px - $title-height;
         text-align: center;
+        margin-right: 300px;
         .container {
           position: relative;
           width: 1000px;
